--- a/src/style.css
+++ b/src/style.css
@@ -1,19 +1,102 @@
-*
-{
-    margin: 0;
-    padding: 0;
+* {
+  margin: 0;
+  padding: 0;
 }
 
 html,
-body
-{
-    overflow: hidden;
+body {
+  overflow: hidden;
 }
 
-.webgl
-{
-    position: fixed;
-    top: 0;
-    left: 0;
-    outline: none;
+.webgl {
+  position: fixed;
+  top: 0;
+  left: 0;
+  outline: none;
+  cursor: grab;
+}
+
+img {
+  width: 100%;
+  height: 100%;
+}
+.modal-btn {
+  position: absolute;
+  bottom: 100px;
+  right: 100px;
+  background-color: pink;
+  height: 50px;
+  width: 50px;
+}
+
+.wrapper {
+  background-color: #000;
+  height: 100vh;
+  width: 100vw;
+  position: relative;
+}
+
+.loading-svg {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  width: 80px;
+  height: 80px;
+  transform: translate(-50%, -50%);
+  transition: opacity 0.5s ease, top 0.5s ease;
+  opacity: 1;
+}
+.loading-svg img {
+  width: 100%;
+  height: 100%;
+}
+
+.loading-svg.ended {
+  opacity: 0;
+  top: 100%;
+}
+
+.loading-border {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  height: 0;
+  width: 0;
+  border: none;
+  transition: height 0.5s 0.5s ease, width 0.5s 1s;
+  user-select: none;
+  pointer-events: none;
+}
+
+.loading-border.ended {
+  border-left: 1px solid #fff;
+  border-right: 1px solid #fff;
+  width: 100%;
+  height: 100%;
+}
+.loading-left,
+.loading-right {
+  width: 50vw;
+  height: 100vh;
+  position: absolute;
+  top: 0;
+  transition: left 0.5s 1s ease-in-out;
+}
+
+.loading-left {
+  left: 0;
+  background-color: #000;
+}
+
+.loading-left.ended {
+  left: -51%;
+}
+
+.loading-right {
+  left: 50%;
+  background-color: #000;
+}
+.loading-right.ended {
+  left: 101%;
 }
