--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;400&display=swap");
 * {
   margin: 0;
   padding: 0;
@@ -6,6 +7,7 @@
 html,
 body {
   overflow: hidden;
+  font-family: "Poppins", sans-serif;
 }
 
 .webgl {
@@ -19,14 +21,152 @@ body {
 img {
   width: 100%;
   height: 100%;
+  position: relative;
 }
 .modal-btn {
   position: absolute;
-  bottom: 100px;
-  right: 100px;
-  background-color: pink;
+  bottom: 30px;
+  right: 30px;
+  background: #485563; /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #29323c, #485563); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #29323c, #485563); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   height: 50px;
   width: 50px;
+  border-radius: 50%;
+  padding: 10px;
+  /* border: 3px solid #000; */
+  cursor: pointer;
+  z-index: 1;
+  overflow: hidden;
+  box-shadow: 0px 1px 1px #aaa, inset 0px 1px 2px #fff;
+}
+
+.modal-btn::after {
+  content: "";
+  z-index: -1;
+  background-color: hsla(0, 0%, 100%, 0.2);
+  position: absolute;
+  top: -50%;
+  bottom: -50%;
+  width: 1.25em;
+  transform: translate3d(-525%, 0, 0) rotate(35deg);
+}
+
+.modal-btn:hover::after {
+  transition: transform 0.45s ease-in-out;
+  transform: translate3d(200%, 0, 0) rotate(35deg);
+}
+
+.modal {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 0%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(0, 0, 0, 0.7);
+  opacity: 0;
+  transition: all 0.15s ease;
+  z-index: 100;
+}
+
+.modal.active {
+  width: 100%;
+  height: 100%;
+  opacity: 1;
+}
+
+.modal.active .modal-outer {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.modal-inner {
+  padding: 0 20px;
+  z-index: 10;
+  background: rgba(255, 255, 255, 1); /* fallback for old browsers */
+  border-radius: 10px;
+  /* border: 2px solid #fafafa; */
+  padding: 1.25rem 1.5rem;
+  font-weight: 200;
+  max-width: 600px;
+  width: 100%;
+  margin: 1.25rem 1.5rem;
+  position: relative;
+}
+
+.modal-inner p {
+  color: rgb(59, 59, 59);
+}
+.modal-footer {
+  display: flex;
+  margin: 0 auto;
+  margin-top: 10px;
+}
+.btn-container {
+  display: flex;
+  margin: 0 auto;
+}
+.button {
+  padding: 0.75rem 1.25rem;
+  margin: 0.5rem;
+  border-radius: 15px;
+  font-size: 12px;
+  font-weight: 400;
+  min-width: 150px;
+  transition: all 0.15s ease;
+  text-align: center;
+  cursor: pointer;
+  overflow: hidden;
+  position: relative;
+  z-index: 1;
+}
+
+.button.primary {
+  background: #fff;
+  border: 1px solid #eeeeee;
+}
+.button.primary:hover {
+  background: rgb(145, 86, 255);
+  color: #fff;
+}
+.button.secondary {
+  background: rgb(145, 86, 255);
+  color: #fff;
+  border: 1px solid rgb(145, 86, 255);
+}
+.button.secondary:hover {
+  background: #fff;
+  border: 1px solid #eeeeee;
+  color: #3b3b3b;
+}
+.close-icon {
+  position: absolute;
+  top: 0.5rem;
+  right: 1.5rem;
+  transform: rotate(45deg);
+  font-size: 2rem;
+  cursor: pointer;
+}
+
+@media only screen and (max-width: 600px) {
+  .modal-inner {
+    font-size: 0.75rem;
+    max-width: 100%;
+  }
+  .btn-container {
+    flex-direction: column;
+  }
+}
+a {
+  color: rgb(145, 86, 255);
+  font-weight: 400;
+  text-decoration: none;
 }
 
 .wrapper {
@@ -67,6 +207,7 @@ img {
   transition: height 0.5s 0.5s ease, width 0.5s 1s;
   user-select: none;
   pointer-events: none;
+  z-index: 600;
 }
 
 .loading-border.ended {
@@ -82,6 +223,7 @@ img {
   position: absolute;
   top: 0;
   transition: left 0.5s 1s ease-in-out;
+  z-index: 500;
 }
 
 .loading-left {
